:sparkles: feat : 기록저장 시 달성 업적, 달성 미션 판단, 상세 기록 조회시 획득가능한 코인 애정도 계산